<resources>
    <string name="app_name">Dream Chat</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="toast_email_not_verified">Your email is not verified</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="action_lagout_message">Do you want to logout?</string>
</resources>
