<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_login"
    tools:context="com.example.ayselkas.myapplication.Fragments.RegisterActivityFragment"
    tools:showIn="@layout/activity_register">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="439dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            app:srcCompat="@mipmap/ic_launcher_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent"
                android:textColorHint="?attr/colorAccent" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:ems="10"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="?attr/colorAccent" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:ems="10"

                android:hint="@string/user_email"
                android:inputType="textPersonName"
                android:textColor="@color/colorAccent"
                android:textColorHint="?attr/colorAccent" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_button"
                android:text="@string/sign_up"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
