<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_login"

    tools:context="com.example.ayselkas.myapplication.Fragments.LoginActivityFragment"
    tools:showIn="@layout/activity_login">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:elevation="11dp"
            app:srcCompat="@mipmap/ic_launcher_icon"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:ems="10"
                android:hint="@string/user_email"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:password="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/black" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button"
                android:text="Login"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintLeft_toLeftOf="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
